# celia-clips

./: .env.example  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_USAGE_TERMS.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_full.txt  supabase_schema.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/custom_integrations/: guide.md  upload_transcript.py
src/: __init__.py  batch_processor.py  cli.py  config.py  job_store.py  llm_provider.py  model_manager.py  utils.py
src/api/: main.py  models.py  processor.py  routes.py
src/asr/: __init__.py  diarizer.py  transcriber.py
src/audio/: processor.py
src/curation/: __init__.py  clip_extractor.py  curator_v2.py  prompt_manager.py  prompts.py  teaser_generator.py  teaser_intro.py
src/curation/signals/: __init__.py  audio_analyzer.py  structural_analyzer.py  text_analyzer.py
src/services/: analytics.py
src/sources/: __init__.py  supabase_transcripts.py
src/subtitles/: __init__.py  generator.py
src/transcription/: README.md  assemblyai.py  base.py  driver.py  local_whisper.py  supabase.py
src/vision/: __init__.py  face_tracker.py  hybrid_speaker_detector.py  reframer.py  split_screen.py  talknet_detector.py
src/vision/talknet/: __init__.py  talkNet.py
src/vision/talknet/model/: attentionLayer.py  audioEncoder.py
src/vision/talknet/model/faceDetector/s3fd/: __init__.py  box_utils.py
web/: astro.config.mjs  package-lock.json  package.json
web/public/: manifest.webmanifest
web/src/: env.d.ts
web/src/components/dashboard/: UploadWidget.tsx
web/src/components/settings/: SettingsDashboard.tsx  SettingsForm.tsx  ui.tsx
web/src/layouts/: Layout.astro
web/src/lib/: supabase.ts
web/src/pages/: index.astro  library.astro  settings.astro
web/src/styles/: global.css
